# deep_learning_from_scratch

./: main.py  pyproject.toml
chapter2/: notebook.ipynb  perceptron.py
chapter3/: number_recognition.py  신경망.ipynb
chapter4/: note.ipynb
quick-start-llm/: chapter1.ipynb
